# 3DO-Android

./: .clangd  .gitignore  .gitmodules  4do-release-key.keystore  GITHUB_ACTIONS_SETUP.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  RENDERER_UPGRADE_SUMMARY.md  SIGNING_KEY_VERIFICATION.md  STATUS.txt  VULKAN_OPENGL_UPGRADE_PLAN.md  build.bat  build.gradle  build.sh  build_apk.sh  build_complete.sh  gradle.properties  plan.md  settings.gradle
.github/: FUNDING.yml
.github/workflows/: android-build.yml
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/cpp/: android_main.cpp  emulator_core.cpp  input_handler.cpp  jni_bridge.cpp  sdl_renderer.cpp  unified_renderer.cpp
app/cpp/libopera/: boolean.h  opera_cdrom.c
app/cpp/native_core/: NATIVE_REWRITE_PLAN.md  native_3do.c  native_arm.c  native_audio.h  native_backend_arm.h  native_backend_arm_core.h  native_backend_bitop.h  native_backend_boolean.h  native_backend_cdrom.h  native_backend_clio.h  native_backend_clock.h  native_backend_core.h  native_backend_diag_port.h  native_backend_discdata.h  native_backend_dsp.h  native_backend_endianness.h  native_backend_extern_c.h  native_backend_fixedpoint_math.h  native_backend_flags.h  native_backend_hack_flags.h  native_backend_inline.h  native_backend_linkedmemblock.h  native_backend_log.h  native_backend_madam.h  native_backend_mem.h  native_backend_pbus.h  native_backend_prng16.h  native_backend_prng32.h  native_backend_region.h  native_backend_region_i.h  native_backend_sport.h  native_backend_state.h  native_backend_swi_hle_0x5XXXX.h  native_backend_vdl.h  native_backend_vdlp.h  native_backend_vdlp_i.h  native_backend_xbus.h  native_backend_xbus_cdrom_plugin.h  native_bios.h  native_bitop.c  (+21 more)
app/cpp/renderers/: gl_renderer.cpp  gl_renderer.h  renderer_factory.cpp  renderer_interface.h  software_renderer.cpp  software_renderer.h  vulkan_renderer.cpp  vulkan_renderer.h
app/cpp/renderers/shaders/: frag.spv  spv_to_cpp.py  vert.spv  vulkan.frag  vulkan.vert  vulkan_shaders.gen.cpp
app/cpp/stubs/: libhardware.cpp  libnativewindow.cpp  libsync.cpp
app/src/main/: AndroidManifest.xml
app/src/main/java/com/fourdo/android/: BezelDownloader.java  BezelResolver.java  CDLoadingActivity.java  CarouselAdapter.java  ControllerMappingManager.java  DeviceOrientationManager.java  DownloadService.java  DownloadSourceActivity.java  DpadView.java  EmulatorActivity.java  EmulatorAudioEngine.java  EmulatorInputRouter.java  EmulatorPathStore.java  FileBrowserActivity.java  GameDownloadAdapter.java  GameGridAdapter.java  GameLibraryActivity.java  IgdbService.java  MainActivity.java  NewControllerMapperActivity.java  SafFileImporter.java  SettingsActivity.java  SetupWizardActivity.java  SplashActivity.java  ThreeDoControllerView.java
app/src/main/res/drawable/: highlight_overlay.xml  ic_launcher_foreground.xml  ic_launcher_round_foreground.xml  library_card_background.xml  library_cover_background.xml  mapper_button_background.xml  mapper_button_selected_background.xml
app/src/main/res/layout/: activity_cd_loading.xml  activity_download_source.xml  activity_emulator.xml  activity_file_browser.xml  activity_game_library.xml  activity_main.xml  activity_new_controller_mapper.xml  activity_settings.xml  activity_setup_wizard.xml  activity_splash.xml  carousel_item.xml  dialog_game_details.xml  game_grid_item.xml  gamepad.xml  item_game_download.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/values/: strings.xml  styles.xml
docs/: index.md
pics/play_store/: README.md
scripts/: build.bat  build.sh  bump_version.bat  bump_version.sh  create_signing_keys.bat  create_signing_keys.sh
